Refactor some rostering endpoints
