# packages/backend/pkg/restapi/operations/rostering/get_rostering_shows_show_slug_summary_responses.go
@@ -1,0 +1,194 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package rostering
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"showplanner.io/pkg/restapi/dtos"
+)
+
+// GetRosteringShowsShowSlugSummaryOKCode is the HTTP code returned for type GetRosteringShowsShowSlugSummaryOK
+const GetRosteringShowsShowSlugSummaryOKCode int = 200
+
+/*
+GetRosteringShowsShowSlugSummaryOK Show
+
+swagger:response getRosteringShowsShowSlugSummaryOK
+*/
+type GetRosteringShowsShowSlugSummaryOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *dtos.ShowSummaryDTO `json:"body,omitempty"`
+}
+
+// NewGetRosteringShowsShowSlugSummaryOK creates GetRosteringShowsShowSlugSummaryOK with default headers values
+func NewGetRosteringShowsShowSlugSummaryOK() *GetRosteringShowsShowSlugSummaryOK {
+
+	return &GetRosteringShowsShowSlugSummaryOK{}
+}
+
+// WithPayload adds the payload to the get rostering shows show slug summary o k response
+func (o *GetRosteringShowsShowSlugSummaryOK) WithPayload(payload *dtos.ShowSummaryDTO) *GetRosteringShowsShowSlugSummaryOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get rostering shows show slug summary o k response
+func (o *GetRosteringShowsShowSlugSummaryOK) SetPayload(payload *dtos.ShowSummaryDTO) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetRosteringShowsShowSlugSummaryOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetRosteringShowsShowSlugSummaryUnauthorizedCode is the HTTP code returned for type GetRosteringShowsShowSlugSummaryUnauthorized
+const GetRosteringShowsShowSlugSummaryUnauthorizedCode int = 401
+
+/*
+GetRosteringShowsShowSlugSummaryUnauthorized Error
+
+swagger:response getRosteringShowsShowSlugSummaryUnauthorized
+*/
+type GetRosteringShowsShowSlugSummaryUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *dtos.Error `json:"body,omitempty"`
+}
+
+// NewGetRosteringShowsShowSlugSummaryUnauthorized creates GetRosteringShowsShowSlugSummaryUnauthorized with default headers values
+func NewGetRosteringShowsShowSlugSummaryUnauthorized() *GetRosteringShowsShowSlugSummaryUnauthorized {
+
+	return &GetRosteringShowsShowSlugSummaryUnauthorized{}
+}
+
+// WithPayload adds the payload to the get rostering shows show slug summary unauthorized response
+func (o *GetRosteringShowsShowSlugSummaryUnauthorized) WithPayload(payload *dtos.Error) *GetRosteringShowsShowSlugSummaryUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get rostering shows show slug summary unauthorized response
+func (o *GetRosteringShowsShowSlugSummaryUnauthorized) SetPayload(payload *dtos.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetRosteringShowsShowSlugSummaryUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetRosteringShowsShowSlugSummaryNotFoundCode is the HTTP code returned for type GetRosteringShowsShowSlugSummaryNotFound
+const GetRosteringShowsShowSlugSummaryNotFoundCode int = 404
+
+/*
+GetRosteringShowsShowSlugSummaryNotFound Error
+
+swagger:response getRosteringShowsShowSlugSummaryNotFound
+*/
+type GetRosteringShowsShowSlugSummaryNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *dtos.Error `json:"body,omitempty"`
+}
+
+// NewGetRosteringShowsShowSlugSummaryNotFound creates GetRosteringShowsShowSlugSummaryNotFound with default headers values
+func NewGetRosteringShowsShowSlugSummaryNotFound() *GetRosteringShowsShowSlugSummaryNotFound {
+
+	return &GetRosteringShowsShowSlugSummaryNotFound{}
+}
+
+// WithPayload adds the payload to the get rostering shows show slug summary not found response
+func (o *GetRosteringShowsShowSlugSummaryNotFound) WithPayload(payload *dtos.Error) *GetRosteringShowsShowSlugSummaryNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get rostering shows show slug summary not found response
+func (o *GetRosteringShowsShowSlugSummaryNotFound) SetPayload(payload *dtos.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetRosteringShowsShowSlugSummaryNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetRosteringShowsShowSlugSummaryInternalServerErrorCode is the HTTP code returned for type GetRosteringShowsShowSlugSummaryInternalServerError
+const GetRosteringShowsShowSlugSummaryInternalServerErrorCode int = 500
+
+/*
+GetRosteringShowsShowSlugSummaryInternalServerError Error
+
+swagger:response getRosteringShowsShowSlugSummaryInternalServerError
+*/
+type GetRosteringShowsShowSlugSummaryInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *dtos.Error `json:"body,omitempty"`
+}
+
+// NewGetRosteringShowsShowSlugSummaryInternalServerError creates GetRosteringShowsShowSlugSummaryInternalServerError with default headers values
+func NewGetRosteringShowsShowSlugSummaryInternalServerError() *GetRosteringShowsShowSlugSummaryInternalServerError {
+
+	return &GetRosteringShowsShowSlugSummaryInternalServerError{}
+}
+
+// WithPayload adds the payload to the get rostering shows show slug summary internal server error response
+func (o *GetRosteringShowsShowSlugSummaryInternalServerError) WithPayload(payload *dtos.Error) *GetRosteringShowsShowSlugSummaryInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get rostering shows show slug summary internal server error response
+func (o *GetRosteringShowsShowSlugSummaryInternalServerError) SetPayload(payload *dtos.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetRosteringShowsShowSlugSummaryInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
