# packages/backend/pkg/restapi/operations/rostering/post_rostering_shows_responses.go
@@ -1,0 +1,174 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package rostering
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"showplanner.io/pkg/restapi/dtos"
+)
+
+// PostRosteringShowsOKCode is the HTTP code returned for type PostRosteringShowsOK
+const PostRosteringShowsOKCode int = 200
+
+/*
+PostRosteringShowsOK OK
+
+swagger:response postRosteringShowsOK
+*/
+type PostRosteringShowsOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *dtos.ShowDTO `json:"body,omitempty"`
+}
+
+// NewPostRosteringShowsOK creates PostRosteringShowsOK with default headers values
+func NewPostRosteringShowsOK() *PostRosteringShowsOK {
+
+	return &PostRosteringShowsOK{}
+}
+
+// WithPayload adds the payload to the post rostering shows o k response
+func (o *PostRosteringShowsOK) WithPayload(payload *dtos.ShowDTO) *PostRosteringShowsOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post rostering shows o k response
+func (o *PostRosteringShowsOK) SetPayload(payload *dtos.ShowDTO) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostRosteringShowsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PostRosteringShowsBadRequestCode is the HTTP code returned for type PostRosteringShowsBadRequest
+const PostRosteringShowsBadRequestCode int = 400
+
+/*
+PostRosteringShowsBadRequest Error
+
+swagger:response postRosteringShowsBadRequest
+*/
+type PostRosteringShowsBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *dtos.Error `json:"body,omitempty"`
+}
+
+// NewPostRosteringShowsBadRequest creates PostRosteringShowsBadRequest with default headers values
+func NewPostRosteringShowsBadRequest() *PostRosteringShowsBadRequest {
+
+	return &PostRosteringShowsBadRequest{}
+}
+
+// WithPayload adds the payload to the post rostering shows bad request response
+func (o *PostRosteringShowsBadRequest) WithPayload(payload *dtos.Error) *PostRosteringShowsBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post rostering shows bad request response
+func (o *PostRosteringShowsBadRequest) SetPayload(payload *dtos.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostRosteringShowsBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PostRosteringShowsUnauthorizedCode is the HTTP code returned for type PostRosteringShowsUnauthorized
+const PostRosteringShowsUnauthorizedCode int = 401
+
+/*
+PostRosteringShowsUnauthorized Error
+
+swagger:response postRosteringShowsUnauthorized
+*/
+type PostRosteringShowsUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *dtos.Error `json:"body,omitempty"`
+}
+
+// NewPostRosteringShowsUnauthorized creates PostRosteringShowsUnauthorized with default headers values
+func NewPostRosteringShowsUnauthorized() *PostRosteringShowsUnauthorized {
+
+	return &PostRosteringShowsUnauthorized{}
+}
+
+// WithPayload adds the payload to the post rostering shows unauthorized response
+func (o *PostRosteringShowsUnauthorized) WithPayload(payload *dtos.Error) *PostRosteringShowsUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post rostering shows unauthorized response
+func (o *PostRosteringShowsUnauthorized) SetPayload(payload *dtos.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostRosteringShowsUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PostRosteringShowsInternalServerErrorCode is the HTTP code returned for type PostRosteringShowsInternalServerError
+const PostRosteringShowsInternalServerErrorCode int = 500
+
+/*
+PostRosteringShowsInternalServerError Internal server error
+
+swagger:response postRosteringShowsInternalServerError
+*/
+type PostRosteringShowsInternalServerError struct {
+}
+
+// NewPostRosteringShowsInternalServerError creates PostRosteringShowsInternalServerError with default headers values
+func NewPostRosteringShowsInternalServerError() *PostRosteringShowsInternalServerError {
+
+	return &PostRosteringShowsInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *PostRosteringShowsInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
