# packages/openapi/openapi.yaml
@@ -274,66 +274,6 @@ paths:
                   $ref: './schemas/Event.yaml#/EventPublicDTO'
         500:
           $ref: '#/responses/Error'
-  /shows:
-    get:
-      summary: Returns a list of shows
-      produces:
-        - application/json
-      responses:
-        500:
-          $ref: '#/responses/Error'
-        401:
-          $ref: '#/responses/Error'
-        200:
-          description: OK
-          schema:
-            type: array
-            items:
-              $ref: './schemas/Show.yaml#/ShowDTO'
-    post:
-      summary: Creates a show
-      consumes:
-        - application/json
-      parameters:
-        - in: body
-          name: show
-          description: The show to create
-          schema:
-            $ref: './schemas/Show.yaml#/CreateShowDTO'
-
-      responses:
-        500:
-          description: Internal server error
-        400:
-          $ref: '#/responses/Error'
-        401:
-          $ref: '#/responses/Error'
-        200:
-          description: OK
-          schema:
-            $ref: './schemas/Show.yaml#/ShowDTO'
-  /shows/{showSlug}/summary:
-    get:
-      summary: Return details about a show
-      parameters:
-        - in: path
-          name: showSlug
-          type: string
-          required: true
-          description: Slug of show
-      produces:
-        - application/json
-      responses:
-        500:
-          $ref: '#/responses/Error'
-        401:
-          $ref: '#/responses/Error'
-        404:
-          $ref: '#/responses/Error'
-        200:
-          description: 'Show'
-          schema:
-            $ref: './schemas/Show.yaml#/ShowSummaryDTO'
 
   /personnel/assignable:
     get:
@@ -900,6 +840,77 @@ paths:
           $ref: '#/responses/Error'
         500:
           $ref: '#/responses/Error'
+
+  # ROSTERING
+  # =========
+
+  /rostering/shows:
+    get:
+      tags:
+        - rostering
+      summary: Returns a list of shows
+      produces:
+        - application/json
+      responses:
+        500:
+          $ref: '#/responses/Error'
+        401:
+          $ref: '#/responses/Error'
+        200:
+          description: OK
+          schema:
+            type: array
+            items:
+              $ref: './schemas/Show.yaml#/ShowDTO'
+    post:
+      tags:
+        - rostering
+      summary: Creates a show
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: show
+          description: The show to create
+          schema:
+            $ref: './schemas/Show.yaml#/CreateShowDTO'
+
+      responses:
+        500:
+          description: Internal server error
+        400:
+          $ref: '#/responses/Error'
+        401:
+          $ref: '#/responses/Error'
+        200:
+          description: OK
+          schema:
+            $ref: './schemas/Show.yaml#/ShowDTO'
+
+  /rostering/shows/{showSlug}/summary:
+    get:
+      tags:
+        - rostering
+      summary: Return details about a show from its slug
+      parameters:
+        - in: path
+          name: showSlug
+          type: string
+          required: true
+          description: Slug of show
+      produces:
+        - application/json
+      responses:
+        500:
+          $ref: '#/responses/Error'
+        401:
+          $ref: '#/responses/Error'
+        404:
+          $ref: '#/responses/Error'
+        200:
+          description: 'Show'
+          schema:
+            $ref: './schemas/Show.yaml#/ShowSummaryDTO'
 
 responses:
   Error:
